fix alignment

--- a/src/components/homepage/styles/About.css
+++ b/src/components/homepage/styles/About.css
@@ -30,7 +30,7 @@
 
 .about-image-container {
 	width: 370px;
-	margin-left: 100px;
+	/*margin-left: 100px;*/
 }
 
 .about-image-wrapper {
