--- a/src/components/homepage/styles/Project.css
+++ b/src/components/homepage/styles/Project.css
@@ -1,30 +1,30 @@
 @import "../../../data/globalStyles.css";
 
-.project {
-    mix-blend-mode: normal;
-    border-radius: 20px;
-    opacity: 0.8;
-    height: 100%;
-}
-
-.project a {
-    text-decoration: none;
-}
-
-
-.project:hover {
+.project-container:hover {
     background: #fafafa;
     opacity: 1;
     transition: background-color 0.3s ease-in-out;
 }
 
-.project:hover .project-link {
+.project-container:hover .project-link {
     color: var(--link-color);
     transition: color 0.3s ease-in-out;
 }
 
+.project {
+    /*mix-blend-mode: normal;*/
+    border-radius: 20px;
+    opacity: 0.8;
+    height: 100%;
+}
+
+.project-container a {
+    text-decoration: none;
+}
+
 .project-container {
     display: flex;
+    border-radius: 20px;
     flex-direction: column;
     padding: 30px;
 }
@@ -34,22 +34,49 @@
 }
 
 .project-left-side {
-    flex-basis: 900px;
+    /*flex-basis: 900px;*/
 }
 
 .project-right-side {
     display: flex;
     flex-direction: column;
-    flex-basis: 300px;
-    align-items: center;
-    margin-top: 30px;
+    /*flex-basis: 300px;*/
+    /*align-items: center;*/
+    /*margin-top: 30px;*/
 }
 
 .project-image-container {
-    width: 100%; /* Adjust the width as needed */
-    max-width: 300px; /* Add this line to limit the image width */
-    align-self: flex-start;
+    width: 300px;
+    /*max-width: 300px;*/
+    /*align-self: flex-start;*/
 }
+
+.project-image-wrapper {
+    /*display: flex;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    overflow: hidden;
+    border-radius: 10%;
+    margin: 30px;
+    /*width: auto; !* Adjust the width as needed *!*/
+    /*height: auto; !* Adjust the height as needed *!*/
+    /*max-width: 100%;*/
+}
+
+.project-image-wrapper img {
+    /*display: flex;*/
+    /*max-width: 100%;*/
+    /*max-height: 100%;*/
+    /*width: auto;*/
+    /*height: auto;*/
+    /*border-radius: 10%;*/
+    /*margin-top: 30px;*/
+    /*overflow: hidden;*/
+    display: block;
+    width: 100%;
+}
+
+
 
 .project-logo {
     width: 30px;
@@ -59,25 +86,7 @@
     width: 100%;
 }
 
-.project-image-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    border-radius: 10%;
-    margin: 30px auto;
-    width: 300px; /* Adjust the width as needed */
-    height: 300px; /* Adjust the height as needed */
-    max-width: 100%;
-}
 
-.project-image-wrapper img {
-    display: block;
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
-    height: auto;
-}
 
 .project-title {
     font-family: var(--secondary-font);
@@ -102,11 +111,12 @@
 
 .project-link {
     display: flex;
-    align-items: center;
+    /*align-items: center;*/
     color: var(--secondary-color);
     font-size: 13px;
     padding-top: 20px;
-    margin-top: auto;
+    /*padding-right: 460px;*/
+    /*margin-right: 460px;*/
 }
 
 .project-link-icon {
@@ -140,10 +150,6 @@
 }
 
 @media (max-width: 600px) {
-    .project {
-        height: 300px;
-    }
-
     .project-container {
         padding-top: 60px;
     }
